# CrewAI_Demo_Project

./: README.md  poem.txt  pyproject.toml
src/my_project/: main.py
